Refactor TenantLiquibaseService to replace deprecated Paths.get() with Path.of() for improved readability and modern Java compatibility.